Update API configuration to use Render backend

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-GOOGLE_API_KEY=AIzaSyAlLUmzOMAQe3v7j6qmA51Dt5pYSyA5fPg 
+# API key for Google Gemini
+GOOGLE_API_KEY=AIzaSyAlLUmzOMAQe3v7j6qmA51Dt5pYSyA5fPg
+
+# For frontend: URL of your Python API
+PYTHON_API_URL=https://video-summify-api.onrender.com/summarize 
