--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "buildCommand": "npm run build",
-  "installCommand": "npm install && pip install -r requirements.txt",
+  "installCommand": "npm install",
   "framework": "nextjs",
   "outputDirectory": ".next",
-  "regions": ["iad1"],
-  "env": {
-    "PYTHONPATH": "."
-  }
+  "regions": ["iad1"]
 } 
