Fix API URL configuration

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 GOOGLE_API_KEY=AIzaSyAlLUmzOMAQe3v7j6qmA51Dt5pYSyA5fPg
 
 # For frontend: URL of your Python API
-PYTHON_API_URL=https://video-summify-api.onrender.com/summarize 
+PYTHON_API_URL=https://video-summify.onrender.com
