--- a/fly.toml
+++ b/fly.toml
@@ -12,4 +12,8 @@ primary_region = "iad"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0 
+  min_machines_running = 0
+  [http_service.concurrency]
+    type = "connections"
+    hard_limit = 550
+    soft_limit = 500 
