--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.3.3
+fastapi==0.104.1
+uvicorn==0.24.0
 gunicorn==21.2.0
 python-dotenv==1.0.0
 youtube_transcript_api==0.6.1
 google-generativeai==0.3.1
-flask-cors==4.0.0
+python-multipart==0.0.6
