Enhance environment configuration for Render deployment
- Updated docker-entrypoint.sh to set and display environment variables
- Modified Dockerfile to explicitly set NODE_ENV and RENDER environment variables
- Added cross-env to package.json for consistent environment handling
- Updated server.js to force production mode when running on Render
- Improved deployment configuration for consistent environment setup

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "node server.js",
+    "start": "cross-env NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
